--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .env
 .venv/
 language-localization/fedorenko10_stimuli
+logs/
+jobs/
+dumps/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
