--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 .env
 .venv/
-language-localization/fedorenko10_stimuli
 logs/
 jobs/
 dumps/
@@ -14,7 +13,8 @@ __pycache__/
 
 # Folders
 xarray_test/*
-data/*
+data/
+data/fedorenko10_stimuli
 
 # C extensions
 *.so
